==> KouweiLee/xiuos-rm3562-mcu/Ubiquitous/XiZi_IIoT_Macro/board/nuvoton-m2354/third_party_driver/uart/connect_uart.c <==
#include <board.h>
#include <connect_uart.h>

static uint32 SerialInit(struct SerialDriver *serial_drv, struct BusConfigureInfo *configure_info)
{
    NULL_PARAM_CHECK(serial_drv);

    uint32 uart_word_len = 0;
    uint32 uart_stop_bit = 0;
    uint32 uart_parity = 0;

    struct SerialCfgParam *serial_cfg = (struct SerialCfgParam *)serial_drv->private_data;
    struct M2354UartHwCfg *serial_hw_cfg = (struct M2354UartHwCfg *)serial_cfg->hw_cfg.private_data;

	struct SerialHardwareDevice *serial_dev = (struct SerialHardwareDevice *)serial_drv->driver.owner_bus->owner_haldev;
	struct SerialDevParam *dev_param = (struct SerialDevParam *)serial_dev->haldev.private_data;

    if (configure_info->private_data) {
        struct SerialCfgParam *serial_cfg_new = (struct SerialCfgParam *)configure_info->private_data;
        SerialCfgParamCheck(serial_cfg, serial_cfg_new);

        if (serial_cfg_new->data_cfg.dev_recv_callback) {
            BusDevRecvCallback(&(serial_dev->haldev), serial_cfg_new->data_cfg.dev_recv_callback);
        }   
    }

	// config serial receive sem timeout
	dev_param->serial_timeout = serial_cfg->data_cfg.serial_timeout;

    switch (serial_cfg->data_cfg.serial_data_bits)
    {
    case DATA_BITS_5:
        uart_word_len = UART_WORD_LEN_5;
        break;
    case DATA_BITS_6:
        uart_word_len = UART_WORD_LEN_6;
        break;
    case DATA_BITS_7:
        uart_word_len = UART_WORD_LEN_7;
        break;
    case DATA_BITS_8:
        uart_word_len = UART_WORD_LEN_8;
        break;
    default:
        KPrintf("SerialInit Unsupported serial_data_bits %u\n", serial_cfg->data_cfg.serial_data_bits);
        return ERROR;
    }

    switch (serial_cfg->data_cfg.serial_stop_bits)
    {
    case STOP_BITS_1:
        uart_stop_bit = UART_STOP_BIT_1;
        break;
    case STOP_BITS_2:
        uart_stop_bit = UART_STOP_BIT_2;
        break;
    default:
        KPrintf("SerialInit Unsupported serial_stop_bits %u\n", serial_cfg->data_cfg.serial_stop_bits);
        return ERROR;
    }

    switch (serial_cfg->data_cfg.serial_parity_mode)
    {
    case PARITY_NONE:
        uart_parity = UART_PARITY_NONE;
        break;
    case PARITY_ODD:
        uart_parity = UART_PARITY_ODD;
        break;
    case PARITY_EVEN:
        uart_parity = UART_PARITY_EVEN;
        break;
    default:
        KPrintf("SerialInit Unsupported serial_parity_mode %u\n", serial_cfg->data_cfg.serial_parity_mode);
        return ERROR;
    }

    /* Reset this module */
    SYS_ResetModule(serial_hw_cfg->uart_rst_index);

    /* Open Uart and set UART Baudrate */
    UART_Open(serial_hw_cfg->uart_handle, serial_cfg->data_cfg.serial_baud_rate);

    /* Set line configuration. */
    UART_SetLineConfig(serial_hw_cfg->uart_handle, 0, uart_word_len, uart_parity, uart_stop_bit);

    /* Enable NVIC interrupt. */
    NVIC_EnableIRQ(serial_hw_cfg->irq_type);

    return EOK;
}

static uint32 SerialConfigure(struct SerialDriver *serial_drv, int serial_operation_cmd)
{
    NULL_PARAM_CHECK(serial_drv);

    struct SerialHardwareDevice *serial_dev = (struct SerialHardwareDevice *)serial_drv->driver.owner_bus->owner_haldev;
    struct SerialCfgParam *serial_cfg = (struct SerialCfgParam *)serial_drv->private_data;
    struct M2354UartHwCfg *serial_hw_cfg = (struct M2354UartHwCfg *)serial_cfg->hw_cfg.private_data;
    struct SerialDevParam *serial_dev_param = (struct SerialDevParam *)serial_dev->haldev.private_data;

    if (OPER_CLR_INT == serial_operation_cmd) {
        if (SIGN_OPER_INT_RX & serial_dev_param->serial_work_mode) {
            UART_DISABLE_INT(serial_hw_cfg->uart_handle, UART_INTEN_RDAIEN_Msk | UART_INTEN_RXTOIEN_Msk | UART_INTEN_TOCNTEN_Msk);
        }
	} else if (OPER_SET_INT == serial_operation_cmd) {
        UART_ENABLE_INT(serial_hw_cfg->uart_handle, UART_INTEN_RDAIEN_Msk | UART_INTEN_RXTOIEN_Msk | UART_INTEN_TOCNTEN_Msk);
    }

    return EOK;
}

static int SerialPutChar(struct SerialHardwareDevice *serial_dev, char c)
{
    struct SerialCfgParam *serial_cfg = (struct SerialCfgParam *)serial_dev->private_data;
    struct M2354UartHwCfg *serial_hw_cfg = (struct M2354UartHwCfg *)serial_cfg->hw_cfg.private_data;

    /* Waiting if TX-FIFO is full. */
    while (UART_IS_TX_FULL(serial_hw_cfg->uart_handle));

    /* Put char into TX-FIFO */
    UART_WRITE(serial_hw_cfg->uart_handle, c);

    return EOK;
}

static int SerialGetChar(struct SerialHardwareDevice *serial_dev)
{
    struct SerialCfgParam *serial_cfg = (struct SerialCfgParam *)serial_dev->private_data;
    struct M2354UartHwCfg *serial_hw_cfg = (struct M2354UartHwCfg *)serial_cfg->hw_cfg.private_data;

    /* Return failure if RX-FIFO is empty. */
    if (UART_GET_RX_EMPTY(serial_hw_cfg->uart_handle)) {
        return -1;
    }

    /* Get char from RX-FIFO */
    return UART_READ(serial_hw_cfg->uart_handle);
}
