==> KouweiLee/xiuos-rm3562-mcu/Ubiquitous/XiZi_IIoT_Macro/board/k210-emulator/third_party_driver/uart/connect_uart.c <==
#include <sysctl.h>
#include <stdio.h>
#include "plic.h"
#include "connect_uart.h"
#include "hardware_uart.h"
#include "hardware_uarths.h"
#define __UART_BRATE_CONST  16

static uint32 SerialInit(struct SerialDriver *serial_drv, struct BusConfigureInfo *configure_info)
{
    NULL_PARAM_CHECK(serial_drv);
    struct SerialCfgParam *serial_cfg = (struct SerialCfgParam *)serial_drv->private_data;

	struct SerialHardwareDevice *serial_dev = (struct SerialHardwareDevice *)serial_drv->driver.owner_bus->owner_haldev;
	struct SerialDevParam *dev_param = (struct SerialDevParam *)serial_dev->haldev.private_data;
    
    if (configure_info->private_data) {
        struct SerialCfgParam *serial_cfg_new = (struct SerialCfgParam *)configure_info->private_data;
        SerialCfgParamCheck(serial_cfg, serial_cfg_new);

        if (serial_cfg_new->data_cfg.dev_recv_callback) {
            BusDevRecvCallback(&(serial_dev->haldev), serial_cfg_new->data_cfg.dev_recv_callback);
        }    
    }

	// config serial receive sem timeout
	dev_param->serial_timeout = serial_cfg->data_cfg.serial_timeout;

    UartBitwidthPointer DataWidth = (UartBitwidthPointer)serial_cfg->data_cfg.serial_data_bits;
    UartStopbitT stopbit = (UartStopbitT)(serial_cfg->data_cfg.serial_stop_bits - 1);
    UartParityT parity = (UartParityT)(serial_cfg->data_cfg.serial_parity_mode - 1);

    uint32 freq = SysctlClockGetFreq(SYSCTL_CLOCK_APB0);
    uint32 divisor = freq / (uint32)serial_cfg->data_cfg.serial_baud_rate;
    uint8 dlh = divisor >> 12;
    uint8 dll = (divisor - (dlh << 12)) / __UART_BRATE_CONST;
    uint8 dlf = divisor - (dlh << 12) - dll * __UART_BRATE_CONST;

    UartDeviceNumberT channel = GetUartChannel(serial_cfg->hw_cfg.serial_register_base);
    CHECK(channel != UART_DEVICE_MAX);

    CHECK(DataWidth >= 5 && DataWidth <= 8);
    if (DataWidth == 5) {
        CHECK(stopbit != UART_STOP_2);
    } else {
        CHECK(stopbit != UART_STOP_1_5);
    }

    uint32 stopbit_val = stopbit == UART_STOP_1 ? 0 : 1;
    uint32 ParityVal;
    switch (parity)
    {
        case UART_PARITY_NONE:
            ParityVal = 0;
            break;
        case UART_PARITY_ODD:
            ParityVal = 1;
            break;
        case UART_PARITY_EVEN:
            ParityVal = 3;
            break;
        default:
            CHECK(!"Invalid parity");
            break;
    }

    _uart_new[channel]->LCR |= 1u << 7;
    _uart_new[channel]->DLH = dlh;
    _uart_new[channel]->DLL = dll;
    _uart_new[channel]->DLF = dlf;
    _uart_new[channel]->LCR = 0;
    _uart_new[channel]->LCR = (DataWidth - 5) |
                          (stopbit_val << 2) |
                          (ParityVal << 3);
    _uart_new[channel]->LCR &= ~(1u << 7);
    _uart_new[channel]->IER |= 0x80; /* THRE */
    _uart_new[channel]->FCR = UART_RECEIVE_FIFO_1 << 6 |
                          UART_SEND_FIFO_8 << 4 |
                          0x1 << 3 |
                          0x1;

    return EOK;
}

static uint32 SerialConfigure(struct SerialDriver *serial_drv, int serial_operation_cmd)
{
    NULL_PARAM_CHECK(serial_drv);

    struct SerialCfgParam *serial_cfg = (struct SerialCfgParam *)serial_drv->private_data;
    struct SerialBus *serial_bus = CONTAINER_OF(serial_drv->driver.owner_bus, struct SerialBus, bus);

    UartDeviceNumberT channel = GetUartChannel(serial_cfg->hw_cfg.serial_register_base);
    CHECK(channel != UART_DEVICE_MAX);

    switch (serial_operation_cmd)
    {
        case OPER_CLR_INT:
        /* Disable the UART Interrupt */
        isrManager.done->disableIrq(serial_cfg->hw_cfg.serial_irq_interrupt);
        _uart_new[channel]->IER &= ~0x1;
        break;
        case OPER_SET_INT:
        /* install interrupt */
        isrManager.done->registerIrq(serial_cfg->hw_cfg.serial_irq_interrupt, UartIrqHandler, serial_bus);
        isrManager.done->enableIrq(serial_cfg->hw_cfg.serial_irq_interrupt);
        _uart_new[channel]->IER |= 0x1;
        break;
    }

    return EOK;
}

static int SerialPutChar(struct SerialHardwareDevice *serial_dev, char c)
{
    struct SerialCfgParam *serial_cfg = (struct SerialCfgParam *)serial_dev->private_data;
    UartDeviceNumberT channel = GetUartChannel(serial_cfg->hw_cfg.serial_register_base);
    CHECK(channel != UART_DEVICE_MAX);

    while (_uart_new[channel]->LSR & (1u << 5));
    _uart_new[channel]->THR = c;

    return EOK;
}

static int SerialGetChar(struct SerialHardwareDevice *serial_dev)
{
    struct SerialCfgParam *serial_cfg = (struct SerialCfgParam *)serial_dev->private_data;
    UartDeviceNumberT channel = GetUartChannel(serial_cfg->hw_cfg.serial_register_base);
    CHECK(channel != UART_DEVICE_MAX);

    if (_uart_new[channel]->LSR & 1)
        return (char)(_uart_new[channel]->RBR & 0xff);
    else
        return -ERROR;
  
    return -ERROR;
}
